--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-CLOUDINARY_URL=""
-MONGO_URI=""
+CLOUDINARY_URL=cloudinary://your_api_key:your_api_secret@your_cloud_name
+MONGO_URI=mongodb+srv://your_username:your_password@your_cluster_url/your_database?retryWrites=true&w=majority&appName=YourAppName
 SENTRY_DSN=
 SENTRY_SAMPLE_RATE=1.0
 ENVIRONMENT=development
