fix: checkout versions

--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -1,8 +1,7 @@
-name: Go Test 
-
 on:
   pull_request:
-    branches: [master]
+    branches:
+      - master
 
 jobs:
   test:
@@ -10,15 +9,26 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v5
+      uses: actions/checkout@v3
 
     - name: Set up Go
-      uses: actions/setup-go@v5
+      uses: actions/setup-go@v4
       with:
-        go-version: '1.23.0'
+        go-version: '1.23'
+
+    - name: Cache Go modules
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cache/go-build
+          ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
 
     - name: Install dependencies
-      run: go mod tidy
+      run: |
+        go mod download  # Download modules
 
     - name: Run tests
       run: go test -v ./...
